--- a/index.html
+++ b/index.html
@@ -16,28 +16,93 @@
 	<div class="container" data-ng-controller="myController">
 		<div class="bs-example bs-example-tabs" data-example-id="togglable-tabs"> 
 			<ul id="myTabs" class="nav nav-tabs" role="tablist"> 
-				<li role="presentation" class=""><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="false">Home</a></li> 
-				<li role="presentation" class="active"><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="true">Add Book</a></li>
-				<li role="presentation" class=""><a href="#dropdown1" role="tab" id="dropdown1e-tab" data-toggle="tab" aria-controls="dropdown1" aria-expanded="true">Book List</a></li>
+				<li role="home" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Home</a></li> 
+				<li role="reserv"><a href="#reserv" role="tab" id="reserv-tab" data-toggle="tab" aria-controls="reserv" aria-expanded="true">Reservation</a></li>
+				<li role="admin"><a href="#admin" role="tab" id="admin-tab" data-toggle="tab" aria-controls="admin" aria-expanded="true">Admin</a></li>
 			</ul> 
 			<div id="myTabContent" class="tab-content"> 
-				<div role="tabpanel" class="tab-pane fade" id="home" aria-labelledby="home-tab"> 
+				<div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab"> 
 					<br>
-					<p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p> 
-				</div> 
-				<div role="tabpanel" class="tab-pane fade active in" id="profile" aria-labelledby="profile-tab"> 
-					<br>
-					{{ test }}
-					<p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p> 
-				</div> 
-				<div role="tabpanel" class="tab-pane fade" id="dropdown1" aria-labelledby="dropdown1-tab"> 
-					<br>
-					<h2 class="text-center">Book List</h2>
+					<h2 class="text-center">Nos livres disponibles</h2>
+
+					<label for="filter">Filtrer par&nbsp;: </label>
+					<select id="filter" name="filterBook" ng-model="filterBook">
+					    	<option value="bookTitle" selected>Titre</option>
+					    	<option value="authorName">Auteur</option>
+					    	<option value="cote">Cote</option>
+					</select>    
+					<hr>
 					<table class="table table-striped">
 						<thead>
 							<tr>
 								<th>Titre</th>
 								<th>Auteur</th>
+								<th>Cote</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="book in bookList|orderBy:filterBook|availableBook">
+								<td>{{ book.bookTitle }}</td>
+								<td>{{ book.authorName }} {{ book.authorFirstname }}</td>
+								<td>{{ book.cote }}</td>
+								<td>
+									<button class="btn btn-primary" onclick="">
+										<span class="glyphicon glyphicon-plus"></span>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div> 
+				<div role="reserv" class="tab-pane fade" id="reserv" aria-labelledby="reserv-tab"> 
+					<h2 class="text-center">Réservation de livre</h2>
+					<p class="text-center">Les livres réservés doivent être remis 2 semaines après leur emprunt.</p>
+					<br>		
+					<div class="form-group">
+						<label class="col-sm-2 control-label" for="findBook">Séléctionner un livre&nbsp;: </label>
+						<select id="findBook" class="form-control" ng-model="selectedBook" ng-change="change()">
+						    <option ng-repeat="book in bookList" value="{{ book }}" >{{ book.bookTitle }}</option>
+						</select> 
+					</div>   
+					<br>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">Nom de l'auteur :</label>
+						<div class="col-sm-2">
+							<input id="hiddenId" type="text" class="hidden" value="{{ book.bookId }}">
+							<input id="reservNom" type="text" class="form-control" value="{{ book.authorName }}" placeholder="Nom de l'auteur">
+						</div>
+					</div>
+					<br>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">Prenom de l'auteur :</label>
+						<div class="col-sm-2">
+							<input id="reservPre" class="form-control" type="text" value="{{ book.authorFirstname }}" placeholder="Prenom de l'auteur">
+						</div>
+					</div>
+					<br>
+					<div class="form-group" ng-hide="add">
+						<label class="col-sm-2 control-label">Cote :</label>
+						<div class="col-sm-2">
+							<input id="reservCote" type="text" class="form-control" value="{{ book.cote }}" placeholder="Cote">
+						</div>
+					</div>
+					<br>
+					<div class="text-center">
+						<button class="btn btn-primary" ng-click="reservBook()">Reserver</span></button>						
+					</div>
+				</div> 
+				<div role="admin" class="tab-pane fade" id="admin" aria-labelledby="admin-tab"> 
+					<br>
+					<h2 class="text-center">Admin</h2>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Titre</th>
+								<th>Auteur</th>
+								<th>Date Emprunt</th>
+								<th>Date Retour</th>
+								<th>Cote</th>
 								<th>Edit</th>
 								<th>Remove</th>
 							</tr>
@@ -46,6 +111,9 @@
 							<tr ng-repeat="book in bookList|orderBy:'bookTitle'">
 								<td>{{ book.bookTitle }}</td>
 								<td>{{ book.authorName }} {{ book.authorFirstname }}</td>
+								<td>{{ book.empDate }}</td>
+								<td>{{ book.returnDate }}</td>
+								<td>{{ book.cote }}</td>
 								<td>
 									<button class="btn btn-primary" ng-click="editBook(book.bookId)">
 										<span class="glyphicon glyphicon-pencil"></span>
